--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -10,29 +10,77 @@
 <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-        <div class="navbar__container">
-            <a href="#home" id="navbar__logo">COLOR</a>
-            <div class="navbar__toggle" id="mobile-menu">
+        <div class="navbar_container">
+            <a href="#home" id="navbar_logo">Dechsit Naetsawan</a>
+            <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="#home" class="navbar__links" id="home-page">Home</a>
+            <ul class="navbar_menu">
+                <li class="navbar_item">
+                    <a href="#home" class="navbar_links" id="home-page">Home</a>
                 </li>
-                <li class="navbar__item">
-                    <a href="#about" class="navbar__links" id="about-page">About</a>
+                <li class="navbar_item">
+                    <a href="#about" class="navbar_links" id="about-page">About</a>
                 </li>
-                <li class="navbar__item">
-                    <a href="#projects" class="navbar__links" id="projects-page">Projects</a>
+                <li class="navbar_item">
+                    <a href="#projects" class="navbar_links" id="projects-page">Projects</a>
                 </li>
-                <li class="navbar__item">
-                    <a href="#skills" class="navbar__links" id="skills-page">Skills</a>
+                <li class="navbar_item">
+                    <a href="#skills" class="navbar_links" id="skills-page">Skills</a>
+                </li>
+                <li class="navbar_item">
+                    <a href="#contact" class="navbar_links" id="skills-page">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <!-- Hero Section -->
+    <div class="hero" id="home">
+        <div class="hero_container">
+            <h1 class="hero_heading">Place <span>holder</span></h1>
+            <p class="hero_description">Placeholder</p>
+        </div>
+    </div>
+
+    <!-- About Section -->
+    <div class="main" id="about">
+        <div class="main_container">
+            <div class="main_img_container">
+                <div class="main_img_card">ICON</div>
+            </div>
+            <div class="main_content">
+                <h1>About Me</h1>
+                <h2>Placeholder</h2>
+                <p>Placeholder</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Projcets Section -->
+    <div class="projects" id="projects">
+        <h1>Projects</h1>
+        <div class="projects_wrapper">
+            <div class="projects_card">
+                <h2>P1</h2>
+                <p>Placeholder</p>
+                <div class="projects_btn">Button</div>
+            </div>
+            <div class="projects_card">
+                <h2>P2</h2>
+                <p>Placeholder</p>
+                <div class="projects_btn">Button</div>
+            </div>
+            <div class="projects_card">
+                <h2>P3</h2>
+                <p>Placeholder</p>
+                <div class="projects_btn">Button</div>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
