Added CSS for projects section and added skills section

--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -65,18 +65,32 @@
         <div class="projects_wrapper">
             <div class="projects_card">
                 <h2>P1</h2>
-                <p>Placeholder</p>
-                <div class="projects_btn">Button</div>
+                <p>Placeholder Description</p>
+                <div class="projects_btn"><button>View</button></div>
             </div>
             <div class="projects_card">
                 <h2>P2</h2>
-                <p>Placeholder</p>
-                <div class="projects_btn">Button</div>
+                <p>Placeholder Description</p>
+                <div class="projects_btn"><button>View</button></div>
             </div>
             <div class="projects_card">
                 <h2>P3</h2>
+                <p>Placeholder Description</p>
+                <div class="projects_btn"><button>View</button></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Skills Section -->
+    <div class="main" id="skills">
+        <div class="main_container">
+            <div class="main_img_container">
+                <div class="main_img_card">ICON</div>
+            </div>
+            <div class="main_content">
+                <h1>Skills</h1>
+                <h2>Placeholder</h2>
                 <p>Placeholder</p>
-                <div class="projects_btn">Button</div>
             </div>
         </div>
     </div>
