Added and styled skills section and added links section

--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -31,7 +31,7 @@
                     <a href="#skills" class="navbar_links" id="skills-page">Skills</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="#contact" class="navbar_links" id="skills-page">Contact</a>
+                    <a href="#links" class="navbar_links" id="links-page">Links</a>
                 </li>
             </ul>
         </div>
@@ -91,6 +91,27 @@
                 <h1>Skills</h1>
                 <h2>Placeholder</h2>
                 <p>Placeholder</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer_container" id="links">
+        <h1>Links</h1>
+        <div class="footer_links">
+            <div class="footer_links_wrapper">
+                <div class="footer_links_items">
+                    <a href="/email">Email</a>
+                </div>
+                <div class="footer_links_items">
+                    <a href="/linkedin">LinkedIn</a>
+                </div>
+                <div class="footer_links_items">
+                    <a href="/github">GitHub</a>
+                </div>
+                <div class="footer_links_items">
+                    <a href="/resume">Resume</a>
+                </div>
             </div>
         </div>
     </div>
