Added navbar underline when scrolling

--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -19,34 +19,31 @@
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="#home" class="navbar_links" id="home-page">Home</a>
+                    <a href="#about" class="navbar_links">About</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="#about" class="navbar_links" id="about-page">About</a>
+                    <a href="#projects" class="navbar_links">Projects</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="#projects" class="navbar_links" id="projects-page">Projects</a>
+                    <a href="#skills" class="navbar_links">Skills</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="#skills" class="navbar_links" id="skills-page">Skills</a>
-                </li>
-                <li class="navbar_item">
-                    <a href="#links" class="navbar_links" id="links-page">Links</a>
+                    <a href="#links" class="navbar_links">Links</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <div class="hero" id="home">
+    <section class="hero" id="home">
         <div class="hero_container">
             <h1 class="hero_heading">Place <span>holder</span></h1>
             <p class="hero_description">Placeholder</p>
         </div>
-    </div>
+    </section>
 
     <!-- About Section -->
-    <div class="main" id="about">
+    <section class="main" id="about">
         <div class="main_container">
             <div class="main_img_container">
                 <div class="main_img_card">ICON</div>
@@ -57,10 +54,10 @@
                 <p>Placeholder</p>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Projcets Section -->
-    <div class="projects" id="projects">
+    <section class="projects" id="projects">
         <h1>Projects</h1>
         <div class="projects_wrapper">
             <div class="projects_card">
@@ -79,10 +76,10 @@
                 <div class="projects_btn"><button>View</button></div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Skills Section -->
-    <div class="main" id="skills">
+    <section class="skills" id="skills">
         <div class="main_container">
             <div class="main_img_container">
                 <div class="main_img_card">ICON</div>
@@ -93,15 +90,15 @@
                 <p>Placeholder</p>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Footer Section -->
-    <div class="footer_container" id="links">
+    <section class="footer_container" id="links">
         <h1>Links</h1>
         <div class="footer_links">
             <div class="footer_links_wrapper">
                 <div class="footer_links_items">
-                    <a href="/email">Email</a>
+                    <a href="/email"> <img src="https://material.angular.io/assets/img/examples/shiba1.jpg"/> Email</a>
                 </div>
                 <div class="footer_links_items">
                     <a href="/linkedin">LinkedIn</a>
@@ -114,7 +111,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <script src="app.js"></script>
 </body>
