Added and styled footer section

--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -93,21 +93,22 @@
     </section>
 
     <!-- Footer Section -->
+    <!-- Credit to https://www.iconfinder.com/search?q=document for icons -->
     <section class="footer_container" id="links">
         <h1>Links</h1>
         <div class="footer_links">
             <div class="footer_links_wrapper">
                 <div class="footer_links_items">
-                    <a href="/email"> <img src="https://material.angular.io/assets/img/examples/shiba1.jpg"/> Email</a>
+                    <a href="/email"> <img src="\Icons\gmail.svg"/> Email</a>
                 </div>
                 <div class="footer_links_items">
-                    <a href="/linkedin">LinkedIn</a>
+                    <a href="/linkedin"> <img src="\Icons\linkedin.svg"/> LinkedIn </a>
                 </div>
                 <div class="footer_links_items">
-                    <a href="/github">GitHub</a>
+                    <a href="/github"> <img src="\Icons\github.svg"/> Github</a>
                 </div>
                 <div class="footer_links_items">
-                    <a href="/resume">Resume</a>
+                    <a href="/resume"> <img src="\Icons\resume.svg"/> Resume</a>
                 </div>
             </div>
         </div>
