Improved hero section styling

--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -36,9 +36,9 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
+        <div class = "bg">
         <div class="hero_container">
-            <h1 class="hero_heading">Place <span>holder</span></h1>
-            <p class="hero_description">Placeholder</p>
+            <h1 class="hero_heading">Welcome to my site!</h1>
         </div>
     </section>
 
@@ -56,7 +56,7 @@
         </div>
     </section>
 
-    <!-- Projcets Section -->
+    <!-- Projects Section -->
     <section class="projects" id="projects">
         <h1>Projects</h1>
         <div class="projects_wrapper">
