Updated Projects section and Technical Skills section.

--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Site</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 </head>
 <body>
     <!-- Navbar Section -->
@@ -70,7 +71,7 @@
         <div class="projects_wrapper">
             <a class="projects_card" href="https://github.com/naetsawd/Personal-Projects/tree/main/2048%20Game" target="_blank">
                 <h2>2048 Game</h2>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png">
+                <img src="https://www.economist.com/img/b/1190/670/90/sites/default/files/images/2015/09/blogs/economist-explains/code2.png">
                 <div class= "projects_desc">
                     <p>
                         In order to show our understanding of object-oriented programming concepts as well as the software design 
@@ -107,15 +108,50 @@
 
     <!-- Skills Section -->
     <section class="skills" id="skills">
-        <div class="about_container">
-            <div class="about_img_container">
-                <div class="about_img_card">ICON</div>
-            </div>
-            <div class="about_content">
-                <h1>Skills</h1>
-                <h2>Placeholder</h2>
-                <p>Placeholder</p>
-            </div>
+        <div class="skills_container">
+        <h1>Technical Skills</h1>
+            <ul class="skills_list">
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="logos:python" data-inline="false" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Python</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="logos:java" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Java</span>
+                </li class="skills_icon">
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="skill-icons:javascript" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Javascript</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="skill-icons:html" data-width="100" data-height="100"></span>
+                    <span class="skills_text">HTML</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="skill-icons:css" data-width="100" data-height="100"></span>
+                    <span class="skills_text">CSS</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="logos:git-icon" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Git</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="vscode-icons:file-type-sqlite" data-width="100" data-height="100"></span>
+                    <span class="skills_text">SQL</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="vscode-icons:file-type-node" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Node.JS</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="logos:react" data-width="100" data-height="100"></span>
+                    <span class="skills_text">React</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="vscode-icons:file-type-jenkins" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Jenkins</span>
+                </li>
+            </ul>
         </div>
     </section>
 
