--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Site</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Dechsit Naetsawan</title>
+    <link rel="icon" type="images/x-icon" href="https://api.iconify.design/ri/game-fill.svg" />
+    <link rel="stylesheet" href="/CSS/main.css">
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 </head>
 <body>
     <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="#home" id="navbar_logo">Dechsit Naetsawan</a>
+            <a href="#hero" id="navbar_logo">Dechsit Naetsawan</a>
             <div class="navbar_toggle" id="mobile_menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -36,7 +37,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero" id="home">
+    <section class="hero" id="hero">
         <div class="hero_heading">
             <h1 id="hero1">Hi there,</h1>
             <h1 id="hero2">I'm Dechsit,</h1>
@@ -71,7 +72,7 @@
         <div class="projects_wrapper">
             <a class="projects_card" href="https://github.com/naetsawd/Personal-Projects/tree/main/2048%20Game" target="_blank">
                 <h2>2048 Game</h2>
-                <img src="https://www.economist.com/img/b/1190/670/90/sites/default/files/images/2015/09/blogs/economist-explains/code2.png">
+                <!-- <img src="https://www.economist.com/img/b/1190/670/90/sites/default/files/images/2015/09/blogs/economist-explains/code2.png"> -->
                 <div class= "projects_desc">
                     <p>
                         In order to show our understanding of object-oriented programming concepts as well as the software design 
@@ -155,27 +156,29 @@
         </div>
     </section>
 
-    <!-- Footer Section -->
+    <!-- Links Section -->
     <!-- Credits to https://www.iconfinder.com/ for icons -->
-    <section class="footer_container" id="links">
+    <section class="links_container" id="links">
         <h1>Links</h1>
-        <div class="footer_links">
-            <div class="footer_links_wrapper">
-                <div class="footer_links_items">
-                    <a href="/email"> <img src="\Icons\gmail.svg"/> Email</a>
-                </div>
-                <div class="footer_links_items">
-                    <a href="/linkedin"> <img src="\Icons\linkedin.svg"/> LinkedIn </a>
-                </div>
-                <div class="footer_links_items">
-                    <a href="/github"> <img src="\Icons\github.svg"/> Github</a>
-                </div>
-                <div class="footer_links_items">
-                    <a href="/resume"> <img src="\Icons\resume.svg"/> Resume</a>
-                </div>
+        <div class="links_wrapper">
+            <div class="links_item">
+                <a href ="mailto: dechsitbkk@gmail.com"><img src="\Icons\email.svg"/> Email</a>
+            </div>
+            <div class="links_item">
+                <a href="https://www.linkedin.com/in/dechsitnaetsawan/" target="_blank"><img src="\Icons\linkedin.svg"/> LinkedIn </a>
+            </div>
+            <div class="links_item">
+                <a href="https://github.com/naetsawd/Personal-Projects" target="_blank"><img src="\Icons\github.svg"/> Github</a>
+            </div>
+            <div class="links_item">
+                <a href="\resume.pdf" target="_blank"><img src="\Icons\resume.svg"/> Resume</a>
             </div>
         </div>
-        <h2>By</h2>
+    </section>
+
+    <!-- Credits Section -->
+    <section class="credits_container">
+        <h1>Designed & Built by Dechsit Naetsawan</h1>
     </section>
 
     <script src="app.js"></script>
