--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -49,7 +49,7 @@
     <section class="about" id="about">
         <div class="about_container">
             <div class="about_img_container">
-                <div class="about_img_card">ICON</div>
+                <div class="about_img_card"><img src="Images/portrait.jpg"></div>
             </div>
             <div class="about_content">
                 <h1>About Me</h1>
@@ -69,6 +69,7 @@
     <!-- Projects Section -->
     <section class="projects" id="projects">
         <h1>Projects</h1>
+        <h2 id="note">(For phones/tablets, touch to go to github)</h2>
         <div class="projects_wrapper">
             <a class="projects_card" href="https://github.com/naetsawd/Personal-Projects/tree/main/2048%20Game" target="_blank">
                 <h2>2048 Game</h2>
@@ -178,7 +179,12 @@
 
     <!-- Credits Section -->
     <section class="credits_container">
-        <h1>Designed & Built by Dechsit Naetsawan</h1>
+        <h1>Credits</h1>
+        <a href ="https://wallpaperaccess.com/pixel-art-gif" target="_blank">Hero Gif Source</a>
+        <a href ="https://iconify.design/" target="_blank">Skills Icon Source</a>
+        <a href ="https://www.iconfinder.com/" target="_blank">Links Icon Source</a>
+        <a href ="https://www.youtube.com/watch?v=3-2Pj5hxwrw&t=4130s" target="_blank">Inspired by Brian Design's Colors site</a>
+        <h2>Designed & Built by Dechsit Naetsawan</h2>
     </section>
 
     <script src="app.js"></script>
