Updated About Me section description.

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <div class="about_content">
                 <h1>About Me</h1>
                 <p>
-                    Hi, my name is Dechsit Naetsawan and I am fourth-year undergraduate student at McMaster University. 
-                    I am pursuing a double major in Mathematics and Computer Science and am set to graduate in May of 2023.
+                    Hi, my name is Dechsit Naetsawan and I am a fourth-year undergraduate student at McMaster University. 
+                    I am pursuing a double major in Mathematics and Computer Science and am set to graduate on June 15th, 2023.
                 </p>    
                 <p>
                     As a motivated and enthusiastic individual, I am seeking opportunities to gain hands-on experience in the field of computer science. 
-                    Although I am aware that I still have much to learn, I am confident that I can contribute to any project or team I am assigned to. 
+                    Although I am aware that I still have much to learn, I am confident that I can contribute to any project or team. 
                     I am dedicated to working hard and becoming a valuable member of any organization, while also fostering positive relationships with my colleagues.
                 </p>
             </div>
@@ -172,7 +172,7 @@
                 <a href="https://github.com/naetsawd/Personal-Projects" target="_blank"><img src="\Icons\github.svg"/> Github</a>
             </div>
             <div class="links_item">
-                <a href="\resume.pdf" target="_blank"><img src="\Icons\resume.svg"/> Resume</a>
+                <a href="\Resume - Dechsit Naetsawan.pdf" target="_blank"><img src="\Icons\resume.svg"/> Resume</a>
             </div>
         </div>
     </section>
