Updated project links and About Me description.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <div class="about_content">
                 <h1>About Me</h1>
                 <p>
-                    Hi, my name is Dechsit Naetsawan and I am a fourth-year undergraduate student at McMaster University. 
-                    I am pursuing a double major in Mathematics and Computer Science and am set to graduate on June 15th, 2023.
+                    Hi, my name is Dechsit Naetsawan and I am a recent graduate from McMaster University. 
+                    I am pursued a double major in Mathematics and Computer Science and graduated on June 15th, 2023.
                 </p>    
                 <p>
                     As a motivated and enthusiastic individual, I am seeking opportunities to gain hands-on experience in the field of computer science. 
@@ -71,7 +71,7 @@
         <h1>Projects</h1>
         <h2 id="note">(For phones/tablets, touch to go to github)</h2>
         <div class="projects_wrapper">
-            <a class="projects_card" href="https://github.com/naetsawd/Personal-Projects/tree/main/2048%20Game" target="_blank">
+            <a class="projects_card" href="https://github.com/naetsawd/2048-Game.git" target="_blank">
                 <h2>2048 Game</h2>
                 <!-- <img src="https://www.economist.com/img/b/1190/670/90/sites/default/files/images/2015/09/blogs/economist-explains/code2.png"> -->
                 <div class= "projects_desc">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </a>
-            <a class="projects_card" href="https://github.com/naetsawd/Personal-Projects/tree/main/QuickBid" target="_blank">
+            <a class="projects_card" href="https://github.com/naetsawd/QuickBid.git" target="_blank">
                 <h2>QuickBid</h2>
                 <div class= "projects_desc">
                     <p>
