Updated GitHub footer link.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <a href="https://www.linkedin.com/in/dechsitnaetsawan/" target="_blank"><img src="\Icons\linkedin.svg"/> LinkedIn </a>
             </div>
             <div class="links_item">
-                <a href="https://github.com/naetsawd/Personal-Projects" target="_blank"><img src="\Icons\github.svg"/> Github</a>
+                <a href="https://github.com/naetsawd" target="_blank"><img src="\Icons\github.svg"/> Github</a>
             </div>
             <div class="links_item">
                 <a href="\Resume - Dechsit Naetsawan.pdf" target="_blank"><img src="\Icons\resume.svg"/> Resume</a>
