Added target="_blank" to email.

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <h1>Links</h1>
         <div class="links_wrapper">
             <div class="links_item">
-                <a href ="mailto: dechsitbkk@gmail.com"><img src="\Icons\email.svg"/> Email</a>
+                <a href ="mailto: dechsitbkk@gmail.com" target="_blank"><img src="\Icons\email.svg"/> Email</a>
             </div>
             <div class="links_item">
                 <a href="https://www.linkedin.com/in/dechsitnaetsawan/" target="_blank"><img src="\Icons\linkedin.svg"/> LinkedIn </a>
