Updated About Me section

--- a/index.html
+++ b/index.html
@@ -54,13 +54,26 @@
             <div class="about_content">
                 <h1>About Me</h1>
                 <p>
-                    Hi, my name is Dechsit Naetsawan and I am a recent graduate from McMaster University. 
-                    I am pursued a double major in Mathematics and Computer Science and graduated on June 15th, 2023.
+                    Hi, my name is Dechsit Naetsawan and I am a recent graduate from McMaster University where I 
+                    pursued a double major in Mathematics and Computer Science. As a motivated and enthusiastic individual, 
+                    I am seeking opportunities to gain hands-on experience and valuable knowledge in any field related to 
+                    software development or data analysis. 
                 </p>    
                 <p>
-                    As a motivated and enthusiastic individual, I am seeking opportunities to gain hands-on experience in the field of computer science. 
-                    Although I am aware that I still have much to learn, I am confident that I can contribute to any project or team. 
-                    I am dedicated to working hard and becoming a valuable member of any organization, while also fostering positive relationships with my colleagues.
+                    I am a very curious individual and love learning how things work especially when it comes to technology.
+                    This curious nature and wanting to know what makes the fruits our modern world tick is the main reason 
+                    I want to be a developer and work on the invisible miracle that is modern day software. In addition, I 
+                    find coding enjoyable as there are different ways to approach a problem and this trait allows for creative 
+                    freedom, not to mention the satisfaction you get when your code finally works. It has even impacted me as a 
+                    person by making me better at problem solving, improving my attention to detail and even silly things like 
+                    thinking about how certain features or designs worked on a website or software. Even though it can be frustrating, 
+                    there are many reasons why I enjoy coding.
+                </p>
+                <p>
+                    As a somewhat reserved individual I spent a lot of my time as a child playing video games and sticking to the friends 
+                    I had while not making many new ones, but as I grew older I tried to change and have during my time at university I
+                    enjoyed meeting new people, working in teams and learning about different cultures. Now that I have grduated I miss these
+                    experiences and hope to find similar enviornments at work. 
                 </p>
             </div>
         </div>
