Changed About Me description and font size. Added more media queries for hero text

--- a/index.html
+++ b/index.html
@@ -55,18 +55,17 @@
                 <h1>About Me</h1>
                 <p>
                     Hi, my name is Dechsit Naetsawan and I am a recent graduate from McMaster University where I 
-                    pursued a double major in Mathematics and Computer Science. As a motivated and enthusiastic individual, 
-                    I am seeking opportunities to gain hands-on experience and valuable knowledge in any field related to 
+                    pursued a double major in Mathematics and Computer Science. I am seeking opportunities to gain hands-on experience and valuable knowledge in any field related to 
                     software development or data analysis. 
                 </p>    
                 <p>
-                    I am a very curious individual and love learning how things work especially when it comes to technology.
-                    This curious nature and wanting to know what makes the fruits our modern world tick is the main reason 
-                    I want to be a developer and work on the invisible miracle that is modern day software. In addition, I 
-                    find coding enjoyable as there are different ways to approach a problem and this trait allows for creative 
+                    I am a curious individual and love learning about how things work especially when it comes to technology.
+                    The software of any modern piece of technology is one of the most important and flexible elements hence
+                    I wanted to be a software developer as software has possibily an infinite numebr of applications. In addition, 
+                    I find coding enjoyable as there are different ways to approach a problem and this trait allows for creative 
                     freedom, not to mention the satisfaction you get when your code finally works. It has even impacted me as a 
                     person by making me better at problem solving, improving my attention to detail and even silly things like 
-                    thinking about how certain features or designs worked on a website or software. Even though it can be frustrating, 
+                    thinking about how certain features or designs work on a website or software. Even though it can be frustrating, 
                     there are many reasons why I enjoy coding.
                 </p>
                 <p>
