Updated About Me description grammer.

--- a/index.html
+++ b/index.html
@@ -54,25 +54,26 @@
             <div class="about_content">
                 <h1>About Me</h1>
                 <p>
-                    Hi, my name is Dechsit Naetsawan and I am a recent graduate from McMaster University where I 
-                    pursued a double major in Mathematics and Computer Science. I am seeking opportunities to gain hands-on experience and valuable knowledge in any field related to 
-                    software development or data analysis. 
+                    Hi, my name is Dechsit Naetsawan, and I am a recent graduate from McMaster University, 
+                    where I pursued a double major in Mathematics and Computer Science. I am seeking opportunities 
+                    to gain hands-on experience and valuable knowledge in any field related to software development 
+                    or data analysis.
                 </p>    
                 <p>
-                    I am a curious individual and love learning about how things work especially when it comes to technology.
-                    The software of any modern piece of technology is one of the most important and flexible elements hence
-                    I wanted to be a software developer as software has possibily an infinite numebr of applications. In addition, 
-                    I find coding enjoyable as there are different ways to approach a problem and this trait allows for creative 
-                    freedom, not to mention the satisfaction you get when your code finally works. It has even impacted me as a 
-                    person by making me better at problem solving, improving my attention to detail and even silly things like 
-                    thinking about how certain features or designs work on a website or software. Even though it can be frustrating, 
-                    there are many reasons why I enjoy coding.
+                    I am a curious individual and love learning about how things work, especially when it comes to technology. 
+                    The software of any modern piece of technology is one of the most important and flexible elements; hence, 
+                    I wanted to be a software developer as software has possibly an infinite number of applications. In addition
+                    , I find coding enjoyable, as there are different ways to approach a problem, and this trait allows for creative 
+                    freedom, not to mention the satisfaction you get when your code finally works. It has even impacted me as a person 
+                    by making me better at problem-solving, improving my attention to detail, and even noticing small things like how 
+                    certain features or designs work on a website or software. Even though it can be frustrating, there are many reasons 
+                    why I enjoy coding.
                 </p>
                 <p>
-                    As a somewhat reserved individual I spent a lot of my time as a child playing video games and sticking to the friends 
-                    I had while not making many new ones, but as I grew older I tried to change and have during my time at university I
-                    enjoyed meeting new people, working in teams and learning about different cultures. Now that I have grduated I miss these
-                    experiences and hope to find similar enviornments at work. 
+                    As a somewhat reserved individual, I spent a lot of my childhood playing video games and sticking to the friends I had
+                    , without making many new ones. However, as I grew older, I made an effort to change. During my time at university, I 
+                    enjoyed meeting new people, working in teams, and learning about different cultures. Now that I have graduated, I miss 
+                    these experiences and hope to find similar environments at work.
                 </p>
             </div>
         </div>
