Added Pixel Bites project as well as image for QuickBid.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dechsit Naetsawan</title>
+    <title>Dechsit.N</title>
     <link rel="icon" type="images/x-icon" href="https://api.iconify.design/ri/game-fill.svg" />
     <link rel="stylesheet" href="/CSS/main.css">
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
@@ -13,7 +13,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="#hero" id="navbar_logo">Dechsit Naetsawan</a>
+            <a href="#hero" id="navbar_logo">Dechsit Naetsawan(WIP)</a>
             <div class="navbar_toggle" id="mobile_menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -73,7 +73,7 @@
                     As a somewhat reserved individual, I spent a lot of my childhood playing video games and sticking to the friends I had
                     , without making many new ones. However, as I grew older, I made an effort to change. During my time at university, I 
                     enjoyed meeting new people, working in teams, and learning about different cultures. Now that I have graduated, I miss 
-                    these experiences and hope to find similar environments at work.
+                    these experiences and hope work in environments where I can experience these things again.
                 </p>
             </div>
         </div>
@@ -84,37 +84,52 @@
         <h1>Projects</h1>
         <h2 id="note">(For phones/tablets, touch to go to github)</h2>
         <div class="projects_wrapper">
-            <a class="projects_card" href="https://github.com/naetsawd/2048-Game.git" target="_blank">
-                <h2>2048 Game</h2>
-                <!-- <img src="https://www.economist.com/img/b/1190/670/90/sites/default/files/images/2015/09/blogs/economist-explains/code2.png"> -->
-                <div class= "projects_desc">
-                    <p>
-                        In order to show our understanding of object-oriented programming concepts as well as the software design 
-                        process we were individually tasked with recreating the popular 2048 game with a text based GUI using Java.
-                    </p>
-                    <div class= "devstack">
-                        <p>Click on the card to read more <br> (Redirects to GitHub) <br><br> Used: Java</p>
-                    </div>
-                </div>
-            </a>
             <a class="projects_card" href="https://github.com/naetsawd/QuickBid.git" target="_blank">
-                <h2>QuickBid</h2>
+                <h2>QuickBid</h2>   
+                <img src="Images/QuickBid.png">
                 <div class= "projects_desc">
                     <p>
                         QuickBid is a simple auction site I worked on in an effort to learn how to use the Django framework and 
                         learn basic styling with CSS.
                     </p>
                     <div class= "devstack">
-                        <p>Click on the card to read more <br> (Redirects to GitHub) <br><br> Used: Python, Django, Html & CSS</p>
+                        <p>Click for more info and live demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Python, Django, Html & CSS</p>
                     </div>
                 </div>
             </a>
-            <a class="projects_card">
+            <a class="projects_card" href="https://github.com/naetsawd/OdinProject-Restaurant" target="_blank">
+                <h2>Pixel Bites</h2>
+                <img src="Images/PixelBites.png">
+                <div class= "projects_desc">
+                    <p>
+                        Pixel Bites is a cafe website I made for the OdinProject's Restaurant Page assignment all site elements
+                        along with the menu items are inspired by a retro arcade and pixel theme.
+                    </p>
+                    <div class= "devstack">
+                        <p>Click for more info and live demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Javascript, Node.js, Webpack, Html & CSS</p>
+                    </div>
+                </div>
+            </a>
+            <a class="projects_card" href="https://github.com/naetsawd/2048-Game.git" target="_blank">
+                <h2>2048 Game</h2>
+                <div class= "projects_desc">
+                    <p>
+                        In order to show our understanding of object-oriented programming concepts as well as the software design 
+                        process we were individually tasked with recreating the popular 2048 game with a text based GUI using Java.
+                    </p>
+                    <div class= "devstack">
+                        <p>Click for more info<br> (Redirects to GitHub) <br><br> Used: Java</p>
+                    </div>
+                </div>
+            </a>
+            <a class="projects_card" href="" target="_blank">
                 <h2>Upcoming Project</h2>
                 <div class= "projects_desc">
-                    <p>This card will be populated once a new project is completed.</p>
+                    <p>
+                        This card is a place holder for a future project and will be replaced.
+                    </p>
                     <div class= "devstack">
-                        <!-- <p>Click on the card to read more <br> (Redirects to GitHub) <br><br> Used: Python, Django, Html & CSS</p> -->
+                        <!-- <p>Click for more info<br> (Redirects to GitHub) <br><br> Used: Java</p> -->
                     </div>
                 </div>
             </a>
